# VoxStage

./: Cargo.toml  README.md
.specify/memory/: constitution.md
apps/voxstage-gui/: README.md  package.json  pnpm-lock.yaml
apps/voxstage-gui/src/: App.vue
apps/voxstage-gui/src-tauri/: Cargo.toml  tauri.conf.json
apps/voxstage-gui/src-tauri/src/: lib.rs  main.rs
apps/voxstage-gui/src/components/: ConfigView.vue  ExprInput.vue  HelpView.vue  ScriptView.vue
apps/voxstage-gui/src/types/: config.ts  script.ts
crates/audio/: Cargo.toml
crates/audio/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  model_manager.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/dsl/: Cargo.toml
crates/dsl/src/: ast.rs  error.rs  lib.rs  parser.rs
crates/dsl/tests/: basic_parse.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/runner/: Cargo.toml
crates/runner/src/: lib.rs
crates/tts-http/: Cargo.toml
crates/tts-http/src/: lib.rs
docs/: gui-phase1.md  gui-phase2.md  gui-phase3.md  gui-phase4.md  gui-phase5.md
examples/: bgm.vox  control_flow.vox  dialog.vox  expr_demo.vox  gpt_sovits_full.vox  hello.vox  luoshen_bgm.vox  mix_gpt_bert.vox  random_demo.vox
specs/001-dsl-expr-interpolation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-dsl-expr-interpolation/contracts/: interpolation.md
