[workspace]
members = [
    "crates/core",
    "crates/tts-http",
    "crates/audio",
    "crates/cli",
    "crates/dsl",
    "crates/engine",
    "crates/runner",
    "apps/voxstage-gui/src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.2.1"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = true }
rodio = { version = "0.18", default-features = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rand = "0.10"
chrono = { version = "0.4", default-features = true }
