[package]
name = "vox-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
vox-core = { path = "../core" }
vox-tts-http = { path = "../tts-http" }
tokio = { workspace = true }
vox-engine = { path = "../engine" }
vox-runner = { path = "../runner" }
clap = { version = "4.5", features = ["derive"] }

