[package]
name = "vox-cli"
version = "0.2.0"
edition = "2024"

[dependencies]
vox-core = { path = "../core" }
vox-dsl = { path = "../dsl" }
vox-engine = { path = "../engine" }
vox-runner = { path = "../runner" }
vox-tts-http = { path = "../tts-http" }
tokio = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

