[package]
name = "voxstage-gui"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "voxstage_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vox-core = { path = "../../../crates/core" }
vox-dsl = { path = "../../../crates/dsl" }
vox-engine = { path = "../../../crates/engine" }
vox-runner = { path = "../../../crates/runner" }
vox-tts-http = { path = "../../../crates/tts-http" }
tokio = { version = "1", features = ["full"] }

